# PersonSite

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
accounts/: serializers.py  services.py  urls.py
functional_tests/: base.py  test_orders.py  test_posts.py  test_shop.py
generic/: module_tests.py  services.py  strategies.py  unit_tests.py  views.py
generic/services/: commands.py  facades.py  strategies.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/services/: base.py  facades.py
orders/tests/: test_facades.py  test_models.py  test_serializers.py  test_services.py  test_views.py
personsite/: settings.py  urls.py
posts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_title.py  0003_remove_post_author.py
posts/services/: base.py  commands.py  facades.py
posts/tests/: test_facades.py  test_models.py  test_serializers.py  test_services.py  test_views.py
shop/: admin.py  models.py  serializers.py  services.py  strategies.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_product_title.py  0003_productreview.py  0004_auto_20210809_1033.py  0005_alter_productreview_rating.py  0006_alter_productreview_rating.py  0007_alter_productreview_rating.py
shop/services/: base.py  commands.py  facades.py  strategies.py
shop/tests/: test_facades.py  test_models.py  test_serializers.py  test_views.py  (+1 more)
templates/: redoc.html
utils/: permissions.py  settings.py
(+1 files in other folders)
